--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <ul class="nav">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -57,8 +58,9 @@
                             />
                         </div>
                         <p>Piece of Picnic</p>
-                        <p>¥1,999</p>
-                        <button>View Details</button>
+                        <p>¥2,999</p>
+                        <a href="item/item1.html" class="details-button">View Details</a>
+
                     </div>
                     <div class="item-card">
                         <div class="img-placeholder">
@@ -69,7 +71,8 @@
                         </div>
                         <p>Sunflower Babushka</p>
                         <p>¥1,599</p>
-                        <button>View Details</button>
+                        <a href="item/item2.html" class="details-button">View Details</a>
+
                     </div>
                     <div class="item-card">
                         <div class="img-placeholder">
@@ -80,7 +83,47 @@
                         </div>
                         <p>Cozy Mesh</p>
                         <p>¥1,299</p>
-                        <button>View Details</button>
+                        <a href="item/item3.html" class="details-button">View Details</a>
+
+                    </div>
+
+                    <div class="item-card">
+                        <div class="img-placeholder">
+                            <img
+                                src="./asset/img/img/darkhat.webp"
+                                alt="編み物帽子"
+                            />
+                        </div>
+                        <p>Summer Haze</p>
+                        <p>¥1,999</p>
+                        <a href="item/item4.html" class="details-button">View Details</a>
+
+                    </div>
+
+                    <div class="item-card">
+                        <div class="img-placeholder">
+                            <img
+                                src="./asset/img/img/baby.webp"
+                                alt="ウサギモチーフの赤ちゃんソックス"
+                            />
+                        </div>
+                        <p>Little Hopper</p>
+                        <p>¥1,599</p>
+                        <a href="item/item5.html" class="details-button">View Details</a>
+
+                    </div>
+
+                    <div class="item-card">
+                        <div class="img-placeholder">
+                            <img
+                                src="./asset/img/img/box.webp"
+                                alt="Circle Memory"
+                            />
+                        </div>
+                        <p>Circle Memory</p>
+                        <p>¥1,599</p>
+                        <a href="item/item6.html" class="details-button">View Details</a>
+
                     </div>
                 </div>
             </section>
@@ -95,7 +138,7 @@
 
             <!-- About -->
             <section class="about" id="about">
-                <h2>About</h2>
+                <h2>About us</h2>
                 <h3>日々にそっと寄り添う、かぎ針のぬくもりを。</h3>
                 <div class="about-content">
                     <div class="img-placeholder">
@@ -107,7 +150,7 @@
                     <div class="text">
                         <ul class="about-points">
                             <li>🧵 すべて手編みの一点もの</li>
-                            <li>🌸 季節に寄り添う色とデザイン</li>
+                            <li>🌿 季節に寄り添う色とデザイン</li>
                             <li>☁️ 軽くてやさしい肌触り</li>
                         </ul>
 
@@ -118,6 +161,23 @@
                             暮らしに寄り添う、糸のぬくもりをお楽しみください。
                         </p>
                     </div>
+                </div>
+            </section>
+
+            <!-- Contact -->
+            <section class="contact" id="contact">
+                <h2>Contact</h2>
+                <p>
+                    ご注文やお問い合わせはこちらのフォームからお願いいたします。
+                </p>
+                <div class="contact-button-wrapper">
+                    <a
+                        href="https://docs.google.com/forms/d/1n8MSeMZBx2VJTH_SX7uDgNPdlqLuPwjtIhfhQFTlfTg/edit"
+                        target="_blank"
+                        class="contact-button"
+                    >
+                        フォームへ進む
+                    </a>
                 </div>
             </section>
 
